--- a/src/main/resources/static/back/latest_news.html
+++ b/src/main/resources/static/back/latest_news.html
@@ -784,7 +784,7 @@
       };
 
       function getData() {
-        fetch("/s123/ShopCarouselServlet")
+        fetch("/Jamigo/ShopCarouselServlet")
           .then((response) => response.json())
           .then((data) => {
             // 在這裡處理回應的資料
@@ -821,7 +821,7 @@
               trElement.innerHTML = `
                     <td>${no}</td>
                     <td>${title}</td>
-                    <td><img src="/s123/DBPicReader?shopCarouselNo=${no}" style="max-width: 250px; max-height: 150px;"></td>
+                    <td><img src="/Jamigo/DBPicReader?shopCarouselNo=${no}" style="max-width: 250px; max-height: 150px;"></td>
                     <td>${states}</td>
                     <td>${startTime}</td>
                     <td>${endTime}</td>
@@ -892,9 +892,13 @@
                                         id="update-state-${no}"
                                         aria-label="Floating label select example"
                                       >
-                                        <option value="" selected>請選擇</option>
-                                        <option value="1">啟用</option>
-                                        <option value="0">未啟用</option>
+                                        <option value="1" ${
+                                          state == 1 ? "selected" : ""
+                                        }>啟用</option>
+                                        <option value="0" ${
+                                          state == 0 ? "selected" : ""
+                                        }
+                                        >未啟用</option>
                                       </select>
                                     </div>
                                   </div>
@@ -1027,6 +1031,86 @@
         // console.log(data);
 
         // 發送 POST 請求
+        fetch("/Jamigo/ShopCarouselServlet", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "X-Data-Type": "json1",
+          },
+          body: JSON.stringify(data),
+        })
+          .then((response) => response.json())
+          .then((responseData) => {
+            Swal.fire("新增完成", "你很棒唉!", "success")
+              .then(() => {
+                // 清空表單
+                document.getElementById("recipient-title").value = "";
+                document.getElementById("recipient-text").value = "";
+                document.getElementById("recipient-statTime").value = "";
+                document.getElementById("recipient-endTime").value = "";
+                document.getElementById("formFile").value = "";
+                document.getElementById("recipient-url").value = "";
+              })
+              .then(() => {
+                location.reload();
+              });
+          })
+          .catch((error) => {
+            // 處理錯誤
+            console.error("Error:", error);
+          });
+
+        // 確認後燈箱隱藏
+        var modal = bootstrap.Modal.getInstance(
+          document.getElementById("exampleModal")
+        );
+        modal.hide();
+      }
+    </script>
+
+    <!------------------------------------- 確認update ------------------------------->
+    <script>
+      // 用於將圖片文件轉換為 Base64 字串
+      function convertImageToBase64(file) {
+        return new Promise((resolve, reject) => {
+          const reader = new FileReader();
+          reader.readAsDataURL(file);
+          reader.onload = () => resolve(reader.result);
+          reader.onerror = (error) => reject(error);
+        });
+      }
+
+      async function addCarousel() {
+        // 取得表單元素的值
+        const title = document.getElementById("recipient-title").value;
+        const text = document.getElementById("recipient-text").value;
+        const startTime = document.getElementById("recipient-statTime").value;
+        const endTime = document.getElementById("recipient-endTime").value;
+        const url = document.getElementById("recipient-url").value;
+        const state = document.getElementById("recipient-state").value;
+
+        // 取得圖片檔案
+        const fileInput = document.getElementById("formFile");
+        const file = fileInput.files[0];
+        // console.log(file);
+
+        // 將圖片轉換為 Base64
+        const base64Image = await convertImageToBase64(file);
+        // console.log(base64Image);
+
+        // 建立 JSON 物件
+        const data = {
+          shopCarouselTitle: title,
+          shopCarouselText: text,
+          shopCarouselStartTime: startTime,
+          shopCarouselEndTime: endTime,
+          shopCarouselPic: base64Image,
+          shopCarouselUrl: url,
+          shopCarouselState: state,
+        };
+        // console.log(data);
+
+        // 發送 POST 請求
         fetch("/s123/ShopCarouselServlet", {
           method: "POST",
           headers: {
@@ -1101,7 +1185,12 @@
         const file = fileInput.files[0];
         // console.log(file);
 
-        const base64Image = await convertImageToBase64(file);
+        let base64Image = ""; // 預設為空字串
+
+        if (file) {
+          // 如果有選擇圖片，才進行轉123
+          base64Image = await convertImageToBase64(file);
+        }
 
         const data = {
           updateShopCarouselNo: no,
@@ -1113,9 +1202,9 @@
           updateShopCarouselUrl: url,
           updateShopCarouselState: state,
         };
-        // console.log(data);
+        console.log(data);
 
-        fetch("/s123/ShopCarouselServlet", {
+        fetch("/Jamigo/ShopCarouselServlet", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
