--- a/src/main/resources/static/counter/login/counter_login.html
+++ b/src/main/resources/static/counter/login/counter_login.html
@@ -158,7 +158,7 @@
         counterPassword: password,
       };
 
-      fetch(url, {
+      fetch("/Jamigo/login", {
         method: "Post",
         headers: {
           "Content-Type": "application/json",
