櫃位頁面完成

--- a/src/main/resources/static/counter/counter_data.html
+++ b/src/main/resources/static/counter/counter_data.html
@@ -446,227 +446,15 @@
               data.counterReportCount;
             document.getElementById("counterAbout").textContent =
               data.counterAbout;
-            if (data.counterPic) {
-              const img = document.createElement("img");
-              img.src = data.counterPic;
-              img.alt = "";
-              img.classList.add("detail-controll-table-img", "col-2");
-              document.getElementById("counterPic").appendChild(img);
-            }
+
+            const img = document.createElement("img");
+            img.src = "/Jamigo/counterPic/" + data.counterNo;
+            img.alt = "";
+            img.classList.add("detail-controll-table-img", "col-2");
+            document.getElementById("counterPic").appendChild(img);
           })
           .catch((error) => console.log("錯誤:", error));
       });
-    </script>
-
-    <!-- ====================================================================== -->
-    <script>
-      // 載入印出
-      window.onload = function () {
-        getData();
-      };
-
-      function getData() {
-        fetch("/counter")
-          .then((response) => response.json())
-          .then((data) => {
-            // 在這裡處理回應的資料
-            console.log(data);
-            const dataRow = document.getElementById("table-body");
-
-            // 清空先前的內容
-            dataRow.innerHTML = "";
-
-            // 輸出每個輪播資料
-            data.forEach((carousel) => {
-              const no = carousel.shopCarouselNo;
-              const title = carousel.shopCarouselTitle;
-              const text = carousel.shopCarouselText;
-              const pic = carousel.shopCarouselPic;
-              const startTime = carousel.shopCarouselStartTime;
-              const endTime = carousel.shopCarouselEndTime;
-              const state = carousel.shopCarouselState;
-              const states =
-                carousel.shopCarouselState === 1 ? "啟用" : "未啟用";
-              const url = carousel.shopCarouselUrl;
-              // console.log(url);
-
-              const newStarTime = moment(startTime, "M月 DD, YYYY").format(
-                "YYYY-MM-DD"
-              );
-              const newEndTime = moment(endTime, "M月 DD, YYYY").format(
-                "YYYY-MM-DD"
-              );
-
-              // 建立元素並插入資料
-              const trElement = document.createElement("tr");
-
-              trElement.innerHTML = `
-                  <td>${no}</td>
-                  <td>${title}</td>
-                  <td><img src="/Jamigo/DBPicReader?shopCarouselNo=${no}" style="max-width: 250px; max-height: 150px;"></td>
-                  <td>${states}</td>
-                  <td>${startTime}</td>
-                  <td>${endTime}</td>
-                  <td>
-                    <button
-                        type="button"
-                        class="btn btn-primary"
-                        data-bs-toggle="modal"
-                        data-bs-target="#exampleModal${no}"
-                        data-bs-whatever="@mdo"
-                      >
-                      詳細資料 / 修改
-                      </button>
-                      <div
-                        class="modal fade"
-                        id="exampleModal${no}"
-                        tabindex="-1"
-                        aria-labelledby="exampleModalLabel"
-                        aria-hidden="true"
-                      >
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h5 class="modal-title" id="exampleModalLabel">
-                                修改輪播
-                              </h5>
-                              <button
-                                type="button"
-                                class="btn-close"
-                                data-bs-dismiss="modal"
-                                aria-label="Close"
-                              ></button>
-                            </div>
-                            <div class="modal-body">
-                              <form>
-                                <input type="hidden"
-                                 id="update-no-${no}" 
-                                 value="${no}">
-                                <div class="mb-3">
-                                  <label
-                                    for="update-title-${no}"
-                                    class="col-form-label"
-                                    >輪播標題</label
-                                  >
-                                  <input
-                                    type="text"
-                                    class="form-control"
-                                    id="update-title-${no}"
-                                    value="${title}"
-                                  />
-                                </div>
-                                <div class="mb-3">
-                                  <label
-                                    for="update-text-${no}"
-                                    class="col-form-label"
-                                    >輪播文字</label
-                                  >
-                                  <textarea class="form-control"
-                                   id="update-text-${no}">${text}</textarea>
-                                  <div class="mb-3">
-                                    <label
-                                      for="recipient-state-${no}"
-                                      class="col-form-label"
-                                      >狀態</label
-                                    >
-                                    <select
-                                      class="form-select"
-                                      id="update-state-${no}"
-                                      aria-label="Floating label select example"
-                                    >
-                                      <option value="1" ${
-                                        state == 1 ? "selected" : ""
-                                      }>啟用</option>
-                                      <option value="0" ${
-                                        state == 0 ? "selected" : ""
-                                      }
-                                      >未啟用</option>
-                                    </select>
-                                  </div>
-                                </div>
-                                <div class="mb-3">
-                                  <label
-                                    for="update-statTim-${no}"
-                                    class="col-form-label"
-                                    >開始時間</label
-                                  >
-                                  <input
-                                    type="date"
-                                    class="form-control"
-                                    id="update-statTime-${no}"
-                                    value="${newStarTime}"
-                                  />
-                                </div>
-
-                                <div class="mb-3">
-                                  <label
-                                    for="update-endTime-${no}"
-                                    class="col-form-label"
-                                    >結束時間</label
-                                  >
-                                  <input
-                                    type="date"
-                                    class="form-control"
-                                    id="update-endTime-${no}"
-                                    value="${newEndTime}"
-                                  />
-                                </div>
-
-                                <div class="mb-3">
-                                  <label for="updateFormFile-${no}" class="form-label"
-                                    >上傳圖片</label
-                                  >
-                                  <input
-                                    class="form-control"
-                                    type="file"
-                                    id="updateFormFile-${no}"
-                                    accept="image/jpeg, image/png"
-                                  />
-                                </div>
-
-                                <div class="mb-3">
-                                  <label
-                                    for="recipient-url-${no}"
-                                    class="col-form-label"
-                                    >輪播連結</label
-                                  >
-                                  <input
-                                    type="text"
-                                    class="form-control"
-                                    id="update-url-${no}"
-                                    value="${url}"
-                                  />
-                                </div>
-                              </form>
-                            </div>
-                            <div class="modal-footer">
-                              <button
-                                type="button"
-                                class="btn btn-secondary"
-                                data-bs-dismiss="modal"
-                              >
-                                Close
-                              </button>
-                              <button type="button" class="btn btn-primary" onclick="updateCarousel(${no})">
-                                確認修改
-                              </button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                  </td>
-                    `;
-              // <a class="btn btn-sm btn-danger" id="btn-delete" href="">刪除</a>
-              // 將元素插入
-              var tableBody = document.getElementById("table-body");
-              tableBody.appendChild(trElement);
-            });
-          })
-          .catch((error) => {
-            // 處理錯誤
-            console.error("Error:", error);
-          });
-      }
     </script>
   </body>
 </html>
